auto: deploy formularacing-0.2
Changes:
M	src/main/java/dev/EfraGroup/formulaRacing/FormulaRacing.java
M	src/main/java/dev/EfraGroup/formulaRacing/TrackLeaderboard.java

Stats:
 2 files changed, 92 insertions(+), 165 deletions(-)